ingressexample/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-deployment
  labels:
    app: sample-python-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-python-app
  template:
    metadata:
      labels:
        app: sample-python-app
    spec:
      containers:
      - name: python-app
        image: abishek1710/flaskdemoapp:latest
        ports:
          - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
  selector:
    app: sample-python-app
#  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
#      nodePort: 30002
