ingressexample/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myappingresss
spec:
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/greet"
        backend:
          service:
            name: python-service
            port:
              number: 80

      - pathType: Prefix
        path: "/weather"
        backend:
          service:
            name: weatherappservice
            port:
              number: 80
