ingressexample/weatherappdeploymemt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherappdeployment
  namespace: weatherappns
  labels:
    app: weatherapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weatherapp
  template:
    metadata:
      labels:
        app: weatherapp
    spec:
      containers:
      - name: flaskweatherapp
        image: abishek1710/flaskweatherapp:latest 
        ports:
        - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: weatherappservice
  namespace: weatherappns
spec:
  selector:
    app: weatherapp
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: weatherappns
  name: ingress-2048
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: "/weather"
          pathType: Prefix
          backend:
            service:
              name: weatherappservice
              port:
                number: 80
